feature: migrate to Java 11